grid en aanpassen

--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
 			<script src="main.js" defer></script>
 	</head>
 	<body>
-		<div class="container">
-			<header class="grid-item header">
-				<img src="spacexlogo.png" alt="Logo van SpaceX"/>
-			</header>
+		<div class="container" class="grid-item co"></div>
+		<header class="grid-item header">
+			<img src="spacexlogo.png" alt="Logo van SpaceX"/>
+		</header>
 			
-			<main id="main">
-			</main>
+		<main class="grid-item main" id="main">
+		</main>
 			
-			<aside>
-				<div class="klokken">
-					<h1 id="clock">
-						0:00
-					</h1>
-				</div>
-			</aside>
-			
-			<aside>
-				<div class="klokken">
-					<h1 id="clock2">
-						0:00
-					</h1>
-				</div>
-			</aside>
-			
-			<aside>
-				<div class="klokken">
-					<h1 id="clock3">
-						0:00
-					</h1>
-				</div>
-			</aside>
-			<div id="raket">
-				<img src="raket.png" alt="raket"> 
+		<aside class="grid-item klok1">
+			<div class="klokken">
+				<h1 id="clock">
+					0:00
+				</h1>
 			</div>
+		</aside>
+			
+		<aside class="grid-item klok2">
+			<div class="klokken">
+				<h1 id="clock2">
+					0:00
+				</h1>
+			</div>
+		</aside>
+			
+		<aside class="grid-item klok3">
+			<div class="klokken">
+				<h1 id="clock3">
+					0:00
+				</h1>
+			</div>
+		</aside>
+		<div class="grid-item raket">
+			<img src="raket.png" alt="raket" id="raket"> 
 		</div>
+
 	</body>
 </html>
