--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<script src="main.js" defer></script>
 	</head>
 	<body>
-		<div class="container" class="grid-item co"></div>
+		<div class="container" class="grid-item container"></div>
 		<header class="grid-item header">
 			<img src="spacexlogo.png" alt="Logo van SpaceX"/>
 		</header>
