--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 			<script src="main.js" defer></script>
 	</head>
 	<body>
-		<div class="container" class="grid-item container"></div>
-		<header class="grid-item header">
+		<div class="container"></div>
+		<header>
 			<img src="spacexlogo.png" alt="Logo van SpaceX"/>
 		</header>
 			
-		<main class="grid-item main" id="main">
+		<main id="main">
 		</main>
 			
-		<aside class="grid-item klok1">
+		<aside>
 			<div class="klokken">
 				<h1 id="clock">
 					0:00
@@ -25,7 +25,7 @@
 			</div>
 		</aside>
 			
-		<aside class="grid-item klok2">
+		<aside>
 			<div class="klokken">
 				<h1 id="clock2">
 					0:00
@@ -33,14 +33,14 @@
 			</div>
 		</aside>
 			
-		<aside class="grid-item klok3">
+		<aside>
 			<div class="klokken">
 				<h1 id="clock3">
 					0:00
 				</h1>
 			</div>
 		</aside>
-		<div class="grid-item raket">
+		<div>
 			<img src="raket.png" alt="raket" id="raket"> 
 		</div>
 
