--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			<link rel="stylesheet" type="text/css" href="styles.css">
 			<link type="text/css" href="grid.css" rel="stylesheet" />	
 			<script src="main.js" defer></script>
+			<meta http-equiv="refresh" content="70">
 	</head>
 	<body>
 		<div class="container">
